# gx-cli

./: .gitignore  .goreleaser.yaml  LICENSE  README.md  go.mod  go.sum  gx.spec  main.go  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  tag.yml
cmd/: conflicts.go  context.go  drift.go  graph.go  handoff.go  helpers.go  init.go  navigate.go  nuke.go  oops.go  parent.go  recap.go  retarget.go  root.go  shelf.go  stack.go  sweep.go  switch.go  sync.go  undo.go  update.go  view.go  who.go
internal/git/: branches.go  branches_test.go  git.go  git_test.go  version.go  version_test.go
internal/stack/: config.go  config_test.go  topo.go  topo_test.go  tree.go
internal/tui/shelf/: model.go
internal/tui/switcher/: model.go
internal/ui/: clipboard.go  confirm.go  picker.go  print.go  print_test.go  spinner.go  styles.go  table.go
src/gx/: __init__.py  main.py
src/gx/commands/: _switch_tui.py  conflicts.py  context.py  drift.py  graph.py  handoff.py  init_cmd.py  navigate.py  nuke.py  oops.py  parent.py  recap.py  retarget.py  shelf.py  stack_cmd.py  sweep.py  switch.py  sync.py  undo.py  update.py  view.py  who.py
src/gx/ui/: shelf_app.py
src/gx/utils/: config.py  display.py  git.py  stack.py  stack_render.py
tests/: conftest.py  test_conflicts.py  test_context.py  test_drift.py  test_graph.py  test_handoff.py  test_init.py  test_navigate.py  test_nuke.py  test_oops.py  test_parent.py  test_recap.py  test_retarget.py  test_shelf.py  test_stack_cmd.py  test_stack_utils.py  test_sweep.py  test_switch.py  test_sync.py  test_undo.py  test_view.py  test_who.py
