[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gx-git"
version = "1.4.0"
description = "Git Productivity Toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mubbie Idoko"},
]
keywords = ["git", "cli", "productivity", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "textual>=0.40",
]

[project.scripts]
gx = "gx.main:app"

[project.urls]
Homepage = "https://github.com/mubbie/gx-cli"
Repository = "https://github.com/mubbie/gx-cli"
Issues = "https://github.com/mubbie/gx-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyinstaller>=6.0",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
